objects/Product_Group_Item__c.object
<CustomObject>
    <fields>
        <fullName>APN_Number__c</fullName>
        <formula>Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_type__c</fullName>
        <description>Based on the new Change of GU Training Unit</description>
        <label>Allocation type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Token</fullName>
                </value>
                <value>
                    <fullName>GU Training Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Product Group Items (Bundle)</relationshipLabel>
        <relationshipName>Product_Group_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupID__c</fullName>
        <label>Sub GroupID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Self_Serve__c</fullName>
        <description>Created for reporting purpose. To identify if an service element is &quot;self Service&quot; or &quot;Non Self -Service&quot; elements</description>
        <formula>IF( ISPICKVAL(Product__r.Consumption_Model__c, &quot;Continuous - Not Tracked&quot;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if an PureSuccess Service Element is a &quot;Self Service&quot; or &quot;Non Self Service&quot; element.</inlineHelpText>
        <label>Is Self Serve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Substitutable_Count__c</fullName>
        <label>Minimum Substitutable Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Play_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Play Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Weightage__c</fullName>
        <label>Price Weightage %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Product Group Items</relationshipLabel>
        <relationshipName>Product_Group_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Description__c</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_To_Hide__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If selected Product Group Item is Consumed then USE button will be hide from this Service Element in PureSuccess Offer Grid</description>
        <inlineHelpText>Select corresponding Product Group Item where USE button need to be hide</inlineHelpText>
        <label>Product To Hide</label>
        <referenceTo>Product_Group_Item__c</referenceTo>
        <relationshipLabel>Product Group Items (Product To Hide)</relationshipLabel>
        <relationshipName>Product_Group_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Mandatory Substitutable</fullName>
                </value>
                <value>
                    <fullName>Substitutable</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Type__c</field>
                <operation>equals</operation>
                <value>Mandatory, Mandatory Substitutable, Substitutable, Optional, Lab, HA</value>
            </filterItems>
            <filterItems>
                <field>Product2.NG5_NA_USD_Price__c</field>
                <operation>notEqual</operation>
                <value>-1</value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Group Items</relationshipLabel>
        <relationshipName>Product_Group_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remove_From_Service_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if a service element is not required in A la carte Service catalog available on PureSuccess Dashboard.</description>
        <inlineHelpText>Use this flag to make a service element unavailable in A la carte Service catalog available on PureSuccess Dashboard</inlineHelpText>
        <label>Remove From Service Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_from_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked then service item will not be allocated in PureSuccess Offer/ A la Carte Package from Quoting Tool</description>
        <inlineHelpText>If it is checked then service element will not be allocated in PureSuccess Offer/ A la Carte Package from Quoting Tool</inlineHelpText>
        <label>Remove from Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_from_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked then Service Element will have status Consumed once it is processed using USE button</description>
        <inlineHelpText>Check this if need to make status of allocated service element as Consumed</inlineHelpText>
        <label>Remove from Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_approval_group__c</fullName>
        <formula>Text(Product__r.Shipment_Approval__c)</formula>
        <label>Shipment approval group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substitutable_Product_Group_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Substitutable Product Group Item</label>
        <referenceTo>Product_Group_Item__c</referenceTo>
        <relationshipLabel>Product Group Items</relationshipLabel>
        <relationshipName>Product_Group_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Token_Value__c</fullName>
        <label>Token Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Group Item</label>
    <nameField>
        <displayFormat>PGI-{00000}</displayFormat>
        <label>Product Group Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>